--- a/views/index.erb
+++ b/views/index.erb
@@ -1,30 +1,29 @@
 <h1>Welcome to the To the Library System</h1>
 
-  <div class="container">
-    <a href="/patrons">View All Patrons</a>
-    <a href="/patrons/new">Add a New Patron</a>
-  </div>
-
   <p>Create a new patron:</p>
 
     <form action="/patrons" method="post">
-      <label for="name">Assign a name to your patron:</label>
+      <label for="name">Patron Name:</label>
       <input id="name" name="name" type="text">
 
       <button type="submit">Add patron</button>
     </form>
 
+
+
   <h3>Add books to any patron: </h3>
 
   <form action="/books" method="post">
 
-    <label for="patron_id">Select a patron</label>
+    <label for="patron_id">Select a Patron</label>
   <select id='patron_id' name='patron_id' type='text'>
     <% @patrons.each() do |patron| %>
       <option value="<%= patron.id()%>"> <%= patron.name() %> </option>
     <% end %>
   </select>
 
+  <br>
+  <br>
     <label for="title">Title of the book:</label>
     <input id="title" name="title" type="text">
 
